--- a/AnimatedTransition/Base.lproj/Main.storyboard
+++ b/AnimatedTransition/Base.lproj/Main.storyboard
@@ -5,15 +5,16 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Transition-->
         <scene sceneID="yyZ-6o-s9l">
             <objects>
                 <collectionViewController id="4td-Xg-jfc" customClass="ViewController" customModule="AnimatedTransition" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="avJ-K0-Uay">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yki-Wh-98g">
-                            <size key="itemSize" width="150" height="150"/>
+                            <size key="itemSize" width="150" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -23,11 +24,22 @@
                                 <rect key="frame" x="0.0" y="64" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="001" translatesAutoresizingMaskIntoConstraints="NO" id="jOB-aD-FTB">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Transition" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OG1-Wv-YN6">
+                                            <rect key="frame" x="0.0" y="151" width="150" height="29"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <size key="customSize" width="150" height="150"/>
+                                <size key="customSize" width="150" height="180"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -35,7 +47,7 @@
                             <outlet property="delegate" destination="4td-Xg-jfc" id="9vO-Ni-psH"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="TNm-ob-7Sy"/>
+                    <navigationItem key="navigationItem" title="Transition" id="TNm-ob-7Sy"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39q-T9-z2j" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -62,4 +74,7 @@
             <point key="canvasLocation" x="-195" y="566.19718309859149"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="001" width="1600" height="1600"/>
+    </resources>
 </document>
