--- a/AnimatedTransition/Base.lproj/Main.storyboard
+++ b/AnimatedTransition/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Transition-->
@@ -13,25 +14,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yki-Wh-98g">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="TOB-NQ-PGM">
                             <size key="itemSize" width="150" height="180"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Y99-7c-ZEN">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ATCollectionCell" id="Y99-7c-ZEN" customClass="ATCollectionViewCell" customModule="AnimatedTransition" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="001" translatesAutoresizingMaskIntoConstraints="NO" id="jOB-aD-FTB">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="001" translatesAutoresizingMaskIntoConstraints="NO" id="jOB-aD-FTB">
+                                            <rect key="frame" x="5" y="5" width="140" height="140"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="jOB-aD-FTB" secondAttribute="height" multiplier="1:1" id="Ovm-ni-Ca8"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Transition" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OG1-Wv-YN6">
-                                            <rect key="frame" x="0.0" y="151" width="150" height="29"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transition" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OG1-Wv-YN6">
+                                            <rect key="frame" x="0.0" y="148" width="150" height="29"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="29" id="COo-QA-Oic"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -39,7 +46,20 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <color key="backgroundColor" red="0.65098039220000004" green="0.65098039220000004" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="jOB-aD-FTB" firstAttribute="leading" secondItem="Y99-7c-ZEN" secondAttribute="leading" constant="5" id="3je-cb-axW"/>
+                                    <constraint firstItem="jOB-aD-FTB" firstAttribute="top" secondItem="Y99-7c-ZEN" secondAttribute="top" constant="5" id="60f-Ne-Upn"/>
+                                    <constraint firstAttribute="trailing" secondItem="OG1-Wv-YN6" secondAttribute="trailing" id="9Cj-kR-g1z"/>
+                                    <constraint firstItem="OG1-Wv-YN6" firstAttribute="top" secondItem="jOB-aD-FTB" secondAttribute="bottom" constant="3" id="DmN-Yx-76G"/>
+                                    <constraint firstAttribute="trailing" secondItem="jOB-aD-FTB" secondAttribute="trailing" constant="5" id="jZo-4A-iDb"/>
+                                    <constraint firstItem="OG1-Wv-YN6" firstAttribute="leading" secondItem="Y99-7c-ZEN" secondAttribute="leading" id="ocJ-pY-anb"/>
+                                </constraints>
                                 <size key="customSize" width="150" height="180"/>
+                                <connections>
+                                    <outlet property="imageView" destination="jOB-aD-FTB" id="hh1-x2-HLB"/>
+                                    <outlet property="textLabel" destination="OG1-Wv-YN6" id="BEe-Er-4iq"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
